--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Omer Shubi Academic Website'
+    description: 'Tom Yuviler Academic Website'
     twitter: ''
   analytics:
     google_analytics: ''
@@ -43,7 +43,7 @@ header:
 
 footer:
   copyright:
-    notice: 'Edit on [GitHub](https://github.com/OmerShubi/omershubi.github.io). Brain & Eye icons by [Flaticon](https://www.flaticon.com/free-icons/deep-learning).'
+    notice: 'Edit on [GitHub](https://github.com/OmerShubi/TomYuviler.github.io)'
     license:
       enable: false
       allow_derivatives: false
@@ -68,7 +68,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/OmerShubi/omershubi.github.io'
+    url: 'https://github.com/TomYuviler/TomYuviler.github.io'
     content_dir: content
     branch: main
   avatar:
